(feat) Support menu in all intervention-page.

--- a/src/pages/intervention-course/intervention-course.html
+++ b/src/pages/intervention-course/intervention-course.html
@@ -5,14 +5,16 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>intervention-course</ion-title>
+    <ion-icon name="menu" menuToggle left></ion-icon>
+    <ion-title>
+      Parcours
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
 
 </ion-content>
+
