--- a/src/pages/intervention-buildings/intervention-buildings.html
+++ b/src/pages/intervention-buildings/intervention-buildings.html
@@ -5,14 +5,16 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>intervention-buildings</ion-title>
+    <ion-icon name="menu" menuToggle left></ion-icon>
+    <ion-title>
+      Bâtiments
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
 
 </ion-content>
+
