--- a/src/pages/intervention-fire-protection/intervention-fire-protection.html
+++ b/src/pages/intervention-fire-protection/intervention-fire-protection.html
@@ -5,11 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>intervention-fire_protection</ion-title>
+    <ion-icon name="menu" menuToggle left></ion-icon>
+    <ion-title>
+      Protection incendie
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
