--- a/src/pages/intervention-water-supplies/intervention-water-supplies.html
+++ b/src/pages/intervention-water-supplies/intervention-water-supplies.html
@@ -5,11 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>intervention-water-supplies</ion-title>
+    <ion-icon name="menu" menuToggle left></ion-icon>
+    <ion-title>
+      Alimentation en eau
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
