(feat) SearchList component and non functional searchBox component.

--- a/src/pages/intervention-general/intervention-general.html
+++ b/src/pages/intervention-general/intervention-general.html
@@ -59,6 +59,12 @@
         <ion-input type="search" formControlName="idLaneTransversal"></ion-input>
       </ion-item>
 
+      <button ion-item (click)="clickTest()">
+        <ion-label fixed>Transversale</ion-label>
+        <ion-note item-end>Rue des pinpons</ion-note>
+      </button>
+
+
     </ion-list>
 
   </form>
