--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,10 @@
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
+  <!-- all code from node_modules directory is here -->
+  <script src="build/vendor.js"></script>
+  
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-
 </body>
 </html>
