Fix(picture-viewer): component is now working correctly in iOS.

--- a/src/pages/intervention-course/intervention-course.html
+++ b/src/pages/intervention-course/intervention-course.html
@@ -14,7 +14,13 @@
 </ion-header>
 
 
-<ion-content>
-  <picture-viewer></picture-viewer>
+<ion-content [formGroup]="form">
+  <!--{{form.status | json}}
+  <div >-->
+    <picture-viewer formControlName="picture">
+
+    </picture-viewer>
+    <!--<input type="text" formControlName="test">
+  </div>-->
 </ion-content>
 
