feat(intervention implementation plan): add this new page and picture handling.

--- a/src/pages/intervention-course/intervention-course.html
+++ b/src/pages/intervention-course/intervention-course.html
@@ -13,14 +13,8 @@
   </ion-navbar>
 </ion-header>
 
-
-<ion-content [formGroup]="form">
-  <!--{{form.status | json}}
-  <div >-->
-    <picture-viewer formControlName="picture">
-
-    </picture-viewer>
-    <!--<input type="text" formControlName="test">
-  </div>-->
+<ion-content>
+  no more arigato mister roboto
 </ion-content>
+
 
