Fix(picture-viewer): no more broken image url when there is no picture.

--- a/src/pages/intervention-implantation-plan/intervention-implantation-plan.html
+++ b/src/pages/intervention-implantation-plan/intervention-implantation-plan.html
@@ -17,7 +17,7 @@
 <ion-content [formGroup]="form">
   <ion-list>
     <ion-list-header>
-      Plan d'implantation {{ form.dirty | json }}
+      Plan d'implantation
     </ion-list-header>
   </ion-list>
   <picture-viewer formControlName="picture">
