Fix(picture-viewer): the file picking ability was not working when not using cordova.

--- a/src/pages/intervention-general/intervention-general.html
+++ b/src/pages/intervention-general/intervention-general.html
@@ -8,7 +8,7 @@
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
     <ion-title>
-      <p>{{plan?.mainBuildingAddress}}</p>
+      {{plan?.mainBuildingAddress}}
     </ion-title>
   </ion-navbar>
 </ion-header>
