Fix(picture viewer): fix some layout issues.  File picker was also only working when selecting jpg file.

--- a/src/pages/intervention-implantation-plan/intervention-implantation-plan.html
+++ b/src/pages/intervention-implantation-plan/intervention-implantation-plan.html
@@ -14,12 +14,12 @@
 </ion-header>
 
 
-<ion-content [formGroup]="form">
-  <ion-list>
+<ion-content [formGroup]="form" ion-fixed>
+  <!--<ion-list>
     <ion-list-header>
       Plan d'implantation
     </ion-list-header>
-  </ion-list>
+  </ion-list>-->
   <picture-viewer formControlName="picture">
   </picture-viewer>
 </ion-content>
