feat: allow user to add new route configuration.

--- a/src/pages/intervention-course-detail/intervention-course-detail.html
+++ b/src/pages/intervention-course-detail/intervention-course-detail.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>InterventionCourseDetail</ion-title>
+    <ion-title>Détails du parcours</ion-title>
   </ion-navbar>
 
 </ion-header>
