feat: allow user to add/modify a route's lane.

--- a/src/pages/intervention-course-detail/intervention-course-detail.html
+++ b/src/pages/intervention-course-detail/intervention-course-detail.html
@@ -28,3 +28,14 @@
   </ion-list>
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons>
+      <button ion-button type="button" (click)="onClickLane(null)">
+        <ion-icon name="add-circle"></ion-icon>
+        Ajouter une voie...
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
