Fix: allow user to delete course or one of a course's lane.

--- a/src/pages/intervention-course-detail/intervention-course-detail.html
+++ b/src/pages/intervention-course-detail/intervention-course-detail.html
@@ -36,6 +36,10 @@
         <ion-icon name="add-circle"></ion-icon>
         Ajouter une voie...
       </button>
+      <button ion-button type="button" (click)="onDeleteCourse()">
+        <ion-icon name="trash"></ion-icon>
+        Supprimer le parcours
+      </button>
     </ion-buttons>
   </ion-toolbar>
 </ion-footer>
