--- a/src/pages/intervention-course-lane/intervention-course-lane.html
+++ b/src/pages/intervention-course-lane/intervention-course-lane.html
@@ -29,3 +29,14 @@
   </ion-list>
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons>
+      <button ion-button type="button" (click)="onDeleteLane()">
+        <ion-icon name="trash"></ion-icon>
+        Supprimer la voie
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
