--- a/src/pages/intervention-course-detail/intervention-course-detail.html
+++ b/src/pages/intervention-course-detail/intervention-course-detail.html
@@ -10,11 +10,12 @@
 
   <ion-list [formGroup]="form">
     <ion-list-header>Caserne</ion-list-header>
-    <ion-item>
+    <ion-item [class.validation-error-control]="form.get('idFirestation').hasError('required')">
       <ion-select class="select-firestation" placeholder="Choisissez une caserne" formControlName="idFirestation">
         <ion-option *ngFor="let fire of controller.firestations" [value]="fire.idFirestation">{{fire.stationName}}</ion-option>
       </ion-select>
     </ion-item>
+    <div *ngIf="form.get('idFirestation').hasError('required')" class="validation-error-text">*La caserne est requise.</div>
   </ion-list>
 
   <ion-list>
@@ -36,7 +37,7 @@
         <ion-icon name="add-circle"></ion-icon>
         Ajouter une voie...
       </button>
-      <button ion-button type="button" (click)="onDeleteCourse()">
+      <button ion-button type="button" (click)="onDeleteCourse()" *ngIf="form.valid">
         <ion-icon name="trash"></ion-icon>
         Supprimer le parcours
       </button>
