Feat: inspection map is now closer to working.
Known bug: building are not being shown in the map.

--- a/src/pages/inspection-map/inspection-map.html
+++ b/src/pages/inspection-map/inspection-map.html
@@ -17,7 +17,7 @@
   <igo-map-browser
     igoMapContext
     igoLayerContext
-    appInterventionLayer
+    intervention-layer
     [map]="map">
     <igo-zoom color="primary" [map]="map"></igo-zoom>
   </igo-map-browser>
