--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="msapplication-tap-highlight" content="no">
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
 
@@ -31,12 +32,14 @@
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
+  <link rel="stylesheet" href="css/angular-material.css">
+
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
   <!-- all code from node_modules directory is here -->
   <script src="build/vendor.js"></script>
-  
+
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 </body>
