feat: login page correctly change token in local storage when logged in.

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
-  <link rel="stylesheet" href="css/angular-material.css">
+  <!--<link rel="stylesheet" href="css/angular-material.css">-->
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
