--- a/src/pages/inspection-list/inspection-list.html
+++ b/src/pages/inspection-list/inspection-list.html
@@ -10,13 +10,20 @@
     <ion-title>Liste des inspections</ion-title>
   </ion-navbar>
 
+  <ion-searchbar
+    [(ngModel)]="searchTerm"
+    (ionInput)="filterList($event)"
+    placeholder="Niveau de risque, # civique ou nom de rue"
+  >
+
+  </ion-searchbar>
 </ion-header>
 
 
 <ion-content>
 
   <ion-list>
-      <button ion-item *ngFor="let inspection of inspections" (click)="itemSelected(inspection)">
+      <button ion-item *ngFor="let inspection of filteredInspections" (click)="itemSelected(inspection)">
         <ion-avatar item-left style="font-size: 40px"><ion-icon name="home" [style.color]="getRiskColor(inspection.idRiskLevel)"></ion-icon></ion-avatar>
         <h2>{{inspection.address}}</h2>
         <p>Niveau de risque : {{getRiskDescription(inspection.idRiskLevel)}}</p>
