--- a/src/pages/inspection-list/inspection-list.html
+++ b/src/pages/inspection-list/inspection-list.html
@@ -26,7 +26,7 @@
         <ion-item-divider>Lot d'inspection : {{batch.description}}</ion-item-divider>
         <button ion-item *ngFor="let inspection of batch.inspections" (click)="itemSelected(inspection)">
           <ion-avatar item-left style="font-size: 40px"><ion-icon name="home" [style.color]="getRiskColor(inspection.idRiskLevel)"></ion-icon></ion-avatar>
-          <h2>1{{inspection.address}}</h2>
+          <h2>{{inspection.address}}</h2>
           <p>Niveau de risque : {{getRiskDescription(inspection.idRiskLevel)}}</p>
         </button>
       </ion-item-group>
