--- a/src/pages/intervention-course/intervention-course.html
+++ b/src/pages/intervention-course/intervention-course.html
@@ -18,7 +18,7 @@
     <ion-list-header>
       Parcours
     </ion-list-header>
-    <button ion-item *ngFor="let item of controller.courses" (click)="onItemClick(item.idInterventionPlanCourse)">{{item.description}}</button>
+    <button ion-item *ngFor="let item of controller.courses" (click)="onItemClick(item.id)">{{item.description}}</button>
   </ion-list>
 </ion-content>
 
