feat: make the general inspection page work again.

--- a/src/pages/intervention-buildings/intervention-buildings.html
+++ b/src/pages/intervention-buildings/intervention-buildings.html
@@ -23,7 +23,7 @@
       <ion-thumbnail item-start *ngIf="building.picture != null">
         <img src="data:image/jpeg;base64,{{building.picture}}">
       </ion-thumbnail>
-      <h2>{{building.alias}}</h2>
+      <h2>{{building.name}}</h2>
     </button>
   </ion-list>
 </ion-content>
