Fix: remove hardcoded id in the loadBuildingList function

--- a/src/pages/intervention-home/intervention-home.html
+++ b/src/pages/intervention-home/intervention-home.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="mycontent">
+<ion-menu [content]="mycontent" [persistent]="true">
   <ion-header>
     <ion-toolbar>
       <ion-title>Plan d'intervention</ion-title>
