--- a/src/pages/intervention-course-lane/intervention-course-lane.html
+++ b/src/pages/intervention-course-lane/intervention-course-lane.html
@@ -14,7 +14,7 @@
       [hasValidationError]="form.get('idLane').hasError('required') ? 'validation-error-control' : null"
       [description]=""
       formControlName="idLane"
-      [displayFieldName]="'fullName'"
+      [displayFieldName]="'name'"
       [keyFieldName]="'id'"
       [showDescription]="false"
       [dataService]="laneRepo"></search-box>
