feat(#13) : Add validation on request response for adding building fire hydrant

--- a/src/pages/city-fire-hydrant/city-fire-hydrant.html
+++ b/src/pages/city-fire-hydrant/city-fire-hydrant.html
@@ -10,7 +10,7 @@
     </ion-list-header>
     <ion-item *ngFor="let hydrant of cityfireHydrants">
       <div>
-        <button class="action-list-button" (click)="onAddHydrant(hydrant.id)">
+        <button class="action-list-button" (click)="AddBuildingFireHydrant(hydrant.id)">
           <ion-icon class="ion-md-arrow-dropright-circle"></ion-icon>
         </button>
         <div>
