Feat(#13) Correctly display icon in button.

--- a/src/pages/intervention-course-lane/intervention-course-lane.html
+++ b/src/pages/intervention-course-lane/intervention-course-lane.html
@@ -35,7 +35,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-buttons>
-      <button ion-button type="button" (click)="onDeleteLane()">
+      <button ion-button icon-start type="button" (click)="onDeleteLane()">
         <ion-icon name="trash"></ion-icon>
         Supprimer la voie
       </button>
