--- a/src/pages/intervention-course/intervention-course.html
+++ b/src/pages/intervention-course/intervention-course.html
@@ -25,7 +25,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-buttons>
-      <button ion-button type="button" (click)="onItemClick(null)">
+      <button ion-button icon-start type="button" (click)="onItemClick(null)">
         <ion-icon name="add-circle"></ion-icon>
         Ajouter...
       </button>
