--- a/src/pages/intervention-course-detail/intervention-course-detail.html
+++ b/src/pages/intervention-course-detail/intervention-course-detail.html
@@ -33,11 +33,11 @@
 <ion-footer>
   <ion-toolbar>
     <ion-buttons>
-      <button ion-button type="button" (click)="onClickLane(null)">
+      <button ion-button icon-start type="button" (click)="onClickLane(null)">
         <ion-icon name="add-circle"></ion-icon>
         Ajouter une voie...
       </button>
-      <button ion-button type="button" (click)="onDeleteCourse()" *ngIf="form.valid">
+      <button ion-button icon-start type="button" (click)="onDeleteCourse()" *ngIf="form.valid">
         <ion-icon name="trash"></ion-icon>
         Supprimer le parcours
       </button>
