feat(#28) Add building main menu and header for all of the pages.

--- a/src/pages/intervention-buildings/intervention-buildings.html
+++ b/src/pages/intervention-buildings/intervention-buildings.html
@@ -19,7 +19,7 @@
     <ion-list-header>
       Liste des bâtiments
     </ion-list-header>
-    <button ion-item *ngFor="let building of buildings">
+    <button ion-item *ngFor="let building of buildings" (click)="onClickBuilding(building.idBuilding)">
       <ion-thumbnail item-start *ngIf="building.picture != null">
         <img src="data:image/jpeg;base64,{{building.picture}}">
       </ion-thumbnail>
