--- a/src/pages/building-anomalies/building-anomalies.html
+++ b/src/pages/building-anomalies/building-anomalies.html
@@ -5,11 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>building-anomalies</ion-title>
+    <ion-icon name="menu" menuToggle left></ion-icon>
+    <ion-title>
+      Anomalies du bâtiment
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
