--- a/src/pages/building-contacts/building-contacts.html
+++ b/src/pages/building-contacts/building-contacts.html
@@ -5,11 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>building-contacts</ion-title>
+    <ion-icon name="menu" menuToggle left></ion-icon>
+    <ion-title>
+      Contacts du bâtiment
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
