--- a/src/pages/building-details/building-details.html
+++ b/src/pages/building-details/building-details.html
@@ -5,11 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>building-details</ion-title>
+    <ion-icon name="menu" menuToggle left></ion-icon>
+    <ion-title>
+      Détails du bâtiment
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
