--- a/src/pages/building-main/building-main.html
+++ b/src/pages/building-main/building-main.html
@@ -1,18 +1,47 @@
-<!--
-  Generated template for the BuildingMainPage page.
+<ion-menu [content]="buildingContent" [persistent]="true">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Bâtiment</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <button ion-item menuClose (click)="openPage(detailsPage)">
+        Détails du bâtiment
+      </button>
+      <button ion-item icon-left menuClose (click)="openPage(contactsPage)">
+        <ion-icon name="person"></ion-icon>
+        Contacts
+      </button>
+      <button ion-item icon-left menuClose (click)="openPage(pnapsPage)">
+        <ion-icon name="people"></ion-icon>
+        PNAPS
+      </button>
+      <button ion-item menuClose (click)="openPage(hazardousMaterialPage)">
+        Matières dangereuses
+      </button>
+      <button ion-item menuClose (click)="openPage(alarmPanelsPage)">
+        Panneaux d'alarme
+      </button>
+      <button ion-item menuClose (click)="openPage(waterSprinklersPage)">
+        Gicleurs
+      </button>
+      <button ion-item menuClose (click)="openPage(particularRisksPage)">
+        Risques particuliers
+      </button>
+      <button ion-item menuClose (click)="openPage(anomaliesPage)">
+        Anomalies
+      </button>
+      <button ion-item icon-left (click)="closeMenu()">
+        <ion-icon name="back"></ion-icon>
+        Retourner à l'inspection
+      </button>
+      <button ion-item icon-left (click)="closeMenu()">
+        <ion-icon name="close"></ion-icon>
+        Fermer le menu
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>building-main</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+<ion-nav #buildingContent [root]="rootPage"></ion-nav>
