--- a/src/pages/building-pnaps/building-pnaps.html
+++ b/src/pages/building-pnaps/building-pnaps.html
@@ -5,11 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>building-pnaps</ion-title>
+    <ion-icon name="menu" menuToggle left></ion-icon>
+    <ion-title>
+      Pnaps du bâtiment
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
