--- a/src/pages/building-water-sprinklers/building-water-sprinklers.html
+++ b/src/pages/building-water-sprinklers/building-water-sprinklers.html
@@ -5,11 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>building-water-sprinklers</ion-title>
+    <ion-icon name="menu" menuToggle left></ion-icon>
+    <ion-title>
+      Gicleurs du bâtiment
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
