feat(#13) : Hot fix from code review on list display

--- a/src/pages/city-fire-hydrant/city-fire-hydrant.html
+++ b/src/pages/city-fire-hydrant/city-fire-hydrant.html
@@ -11,7 +11,7 @@
     <ion-item *ngFor="let hydrant of cityfireHydrants">
       <div>
         <button class="action-list-button" (click)="AddBuildingFireHydrant(hydrant.id)">
-          <ion-icon class="ion-md-arrow-dropright-circle"></ion-icon>
+          <ion-icon name="arrow-dropright-circle"></ion-icon>
         </button>
         <div>
           <h2>{{hydrant.number}}</h2>
