feat(#28) fix navigation and menus opening.

--- a/src/pages/building-main/building-main.html
+++ b/src/pages/building-main/building-main.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="buildingContent" [persistent]="true">
+<ion-menu [content]="buildingContent" [persistent]="true" id="buildingMenu">
   <ion-header>
     <ion-toolbar>
       <ion-title>Bâtiment</ion-title>
@@ -6,38 +6,44 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <button ion-item menuClose (click)="openPage(detailsPage)">
+      <button ion-item icon-left menuClose (click)="openPage(detailsPage)">
+        <ion-icon name="information-circle"></ion-icon>
         Détails du bâtiment
       </button>
       <button ion-item icon-left menuClose (click)="openPage(contactsPage)">
-        <ion-icon name="person"></ion-icon>
+        <ion-icon name="contacts"></ion-icon>
         Contacts
       </button>
       <button ion-item icon-left menuClose (click)="openPage(pnapsPage)">
         <ion-icon name="people"></ion-icon>
         PNAPS
       </button>
-      <button ion-item menuClose (click)="openPage(hazardousMaterialPage)">
+      <button ion-item icon-left menuClose (click)="openPage(hazardousMaterialPage)">
+        <ion-icon name="nuclear"></ion-icon>
         Matières dangereuses
       </button>
-      <button ion-item menuClose (click)="openPage(alarmPanelsPage)">
+      <button ion-item icon-left menuClose (click)="openPage(alarmPanelsPage)">
+        <ion-icon name="notifications"></ion-icon>
         Panneaux d'alarme
       </button>
-      <button ion-item menuClose (click)="openPage(waterSprinklersPage)">
+      <button ion-item icon-left menuClose (click)="openPage(waterSprinklersPage)">
+        <ion-icon name="water"></ion-icon>
         Gicleurs
       </button>
-      <button ion-item menuClose (click)="openPage(particularRisksPage)">
+      <button ion-item icon-left menuClose (click)="openPage(particularRisksPage)">
+        <ion-icon name="flash"></ion-icon>
         Risques particuliers
       </button>
-      <button ion-item menuClose (click)="openPage(anomaliesPage)">
+      <button ion-item icon-left menuClose (click)="openPage(anomaliesPage)">
+        <ion-icon name="warning"></ion-icon>
         Anomalies
       </button>
       <button ion-item icon-left (click)="closeMenu()">
-        <ion-icon name="back"></ion-icon>
+        <ion-icon name="undo"></ion-icon>
         Retourner à l'inspection
       </button>
       <button ion-item icon-left (click)="closeMenu()">
-        <ion-icon name="close"></ion-icon>
+        <ion-icon name="close-circle"></ion-icon>
         Fermer le menu
       </button>
     </ion-list>
