--- a/src/pages/intervention-home/intervention-home.html
+++ b/src/pages/intervention-home/intervention-home.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="mycontent" [persistent]="true">
+<ion-menu [content]="mycontent" [persistent]="true" id="inspectionMenu">
   <ion-header>
     <ion-toolbar>
       <ion-title>Plan d'intervention</ion-title>
