feaet(#22) User can now see the contact list.

--- a/src/pages/building-contacts/building-contacts.html
+++ b/src/pages/building-contacts/building-contacts.html
@@ -8,12 +8,20 @@
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
     <ion-title>
-      Contacts du bâtiment
+      {{name}}
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+  <ion-list>
+    <ion-list-header>
+      Contacts du bâtiment
+    </ion-list-header>
+    <button ion-item icon-left *ngFor="let contact of contacts | orderBy:'name'" (click)="onItemClick(contact.id)">
+      <ion-icon [name]="contact.isOwner ? 'key' : 'contact'"></ion-icon>
+      {{contact.name}}
+    </button>
+  </ion-list>
 </ion-content>
