--- a/src/pages/building-details/building-details.html
+++ b/src/pages/building-details/building-details.html
@@ -8,7 +8,7 @@
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
     <ion-title>
-      Détails du bâtiment
+      {{name}}
     </ion-title>
   </ion-navbar>
 </ion-header>
