--- a/src/pages/building-contact-detail/building-contact-detail.html
+++ b/src/pages/building-contact-detail/building-contact-detail.html
@@ -18,6 +18,64 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+  <ion-list [formGroup]="form">
+    <ion-item>
+        <ion-label fixed>Prénom</ion-label>
+        <ion-input type="text" formControlName="firstName"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label fixed>Nom</ion-label>
+      <ion-input type="text" formControlName="lastName"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label fixed>Est propriétaire</ion-label>
+      <ion-toggle formControlName="isOwner"></ion-toggle>
+    </ion-item>
 
+    <ion-item-group>
+      <ion-item-divider color="light">Téléphone maison</ion-item-divider>
+      <ion-item>
+        <ion-label fixed>Numéro</ion-label>
+        <ion-input  type="tel" formControlName="phoneNumber"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label fixed>Extension</ion-label>
+        <ion-input formControlName="phoneNumberExtension"></ion-input>
+      </ion-item>
+    </ion-item-group>
+
+    <ion-item-group>
+      <ion-item-divider color="light">Cellulaire</ion-item-divider>
+      <ion-item>
+        <ion-label fixed>Numéro</ion-label>
+        <ion-input type="tel" formControlName="cellphoneNumber"></ion-input>
+      </ion-item>
+    </ion-item-group>
+
+    <ion-item-group>
+      <ion-item-divider color="light">Téléavertisseur</ion-item-divider>
+      <ion-item>
+        <ion-label fixed>Numéro</ion-label>
+        <ion-input type="tel"  formControlName="pagerNumber"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label fixed>Code</ion-label>
+        <ion-input formControlName="pagerCode"></ion-input>
+      </ion-item>
+    </ion-item-group>
+
+    <ion-item-group>
+      <ion-item-divider color="light">Autre téléphone</ion-item-divider>
+      <ion-item>
+        <ion-label fixed>Numéro</ion-label>
+        <ion-input type="tel"  formControlName="otherNumber"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label fixed>Extension</ion-label>
+        <ion-input formControlName="otherNumberExtension"></ion-input>
+      </ion-item>
+    </ion-item-group>
+
+  </ion-list>
 </ion-content>
