feat(#22) Fully implemented building's contacts management.

--- a/src/pages/building-contacts/building-contacts.html
+++ b/src/pages/building-contacts/building-contacts.html
@@ -25,3 +25,15 @@
     </button>
   </ion-list>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons>
+      <button ion-button icon-start full type="button" (click)="onItemClick(null)">
+        <ion-icon name="add-circle"></ion-icon>
+        Ajouter un contact...
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
+
