--- a/src/pages/building-contact-detail/building-contact-detail.html
+++ b/src/pages/building-contact-detail/building-contact-detail.html
@@ -8,8 +8,14 @@
 
   <ion-navbar>
     <ion-buttons left>
-      <button ion-button  icon-only (click)="viewCtrl.dismiss()">
+      <button ion-button  icon-only (click)="onCancelEdition()">
         <ion-icon name="arrow-back"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-buttons end>
+      <button ion-button icon-start (click)="onDeleteContact()">
+        Supprimer
+        <ion-icon name="trash"></ion-icon>
       </button>
     </ion-buttons>
     <ion-title>Édition du contact</ion-title>
@@ -20,28 +26,37 @@
 
 <ion-content>
   <ion-list [formGroup]="form">
-    <ion-item>
-        <ion-label fixed>Prénom</ion-label>
-        <ion-input type="text" formControlName="firstName"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label fixed>Nom</ion-label>
-      <ion-input type="text" formControlName="lastName"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label fixed>Est propriétaire</ion-label>
-      <ion-toggle formControlName="isOwner"></ion-toggle>
-    </ion-item>
+    <ion-item-group>
+      <ion-item-divider>Informations générales</ion-item-divider>
+      <ion-item [class.invalid]="!form.controls.firstName.valid">
+          <ion-label fixed>Prénom</ion-label>
+          <ion-input type="text" formControlName="firstName"></ion-input>
+      </ion-item>
+      <div *ngIf="form.get('firstName').hasError('required')" class="validation-error-text">*Le prénom est requis.</div>
+      <ion-item [class.invalid]="!form.controls.lastName.valid">
+        <ion-label fixed>Nom</ion-label>
+        <ion-input type="text" formControlName="lastName"></ion-input>
+      </ion-item>
+      <div *ngIf="form.get('lastName').hasError('required')" class="validation-error-text">*Le nom est requis.</div>
+      <ion-item>
+        <ion-label fixed>Est propriétaire</ion-label>
+        <ion-toggle formControlName="isOwner"></ion-toggle>
+      </ion-item>
+      <ion-item>
+        <ion-label fixed>Priorité</ion-label>
+        <ion-input type="number" formControlName="callPriority"></ion-input>
+      </ion-item>
+    </ion-item-group>
 
     <ion-item-group>
       <ion-item-divider color="light">Téléphone maison</ion-item-divider>
       <ion-item>
         <ion-label fixed>Numéro</ion-label>
-        <ion-input  type="tel" formControlName="phoneNumber"></ion-input>
+        <ion-input placeholder="(xxx) xxx-xxxxx" [brmasker]="{mask:'(000) 000-0000', len:14, type:'num'}" type="text" formControlName="phoneNumberMasked"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label fixed>Extension</ion-label>
-        <ion-input formControlName="phoneNumberExtension"></ion-input>
+        <ion-input formControlName="phoneNumberExtension" type="text" [brmasker]="{mask:'0000000000', len:10, type:'num'}"></ion-input>
       </ion-item>
     </ion-item-group>
 
@@ -49,7 +64,7 @@
       <ion-item-divider color="light">Cellulaire</ion-item-divider>
       <ion-item>
         <ion-label fixed>Numéro</ion-label>
-        <ion-input type="tel" formControlName="cellphoneNumber"></ion-input>
+        <ion-input placeholder="(xxx) xxx-xxxxx" [brmasker]="{mask:'(000) 000-0000', len:14, type:'num'}" type="text"formControlName="cellphoneNumberMasked"></ion-input>
       </ion-item>
     </ion-item-group>
 
@@ -57,11 +72,11 @@
       <ion-item-divider color="light">Téléavertisseur</ion-item-divider>
       <ion-item>
         <ion-label fixed>Numéro</ion-label>
-        <ion-input type="tel"  formControlName="pagerNumber"></ion-input>
+        <ion-input placeholder="(xxx) xxx-xxxxx" [brmasker]="{mask:'(000) 000-0000', len:14, type:'num'}" type="text" formControlName="pagerNumberMasked"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label fixed>Code</ion-label>
-        <ion-input formControlName="pagerCode"></ion-input>
+        <ion-input formControlName="pagerCode" type="text" [brmasker]="{mask:'0000000000', len:10, type:'num'}"></ion-input>
       </ion-item>
     </ion-item-group>
 
@@ -69,11 +84,11 @@
       <ion-item-divider color="light">Autre téléphone</ion-item-divider>
       <ion-item>
         <ion-label fixed>Numéro</ion-label>
-        <ion-input type="tel"  formControlName="otherNumber"></ion-input>
+        <ion-input placeholder="(xxx) xxx-xxxxx" [brmasker]="{mask:'(000) 000-0000', len:14, type:'num'}" type="text"formControlName="otherNumberMasked"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label fixed>Extension</ion-label>
-        <ion-input formControlName="otherNumberExtension"></ion-input>
+        <ion-input formControlName="otherNumberExtension" type="text" [brmasker]="{mask:'0000000000', len:10, type:'num'}"></ion-input>
       </ion-item>
     </ion-item-group>
 
