Feat(#22) Have the icon to be a bit smaller in the menu.

--- a/src/pages/building-main/building-main.html
+++ b/src/pages/building-main/building-main.html
@@ -7,43 +7,43 @@
   <ion-content>
     <ion-list>
       <button ion-item icon-left menuClose (click)="openPage(detailsPage)">
-        <ion-icon name="information-circle"></ion-icon>
+        <ion-icon name="information-circle" small></ion-icon>
         Détails du bâtiment
       </button>
       <button ion-item icon-left menuClose (click)="openPage(contactsPage)">
-        <ion-icon name="contacts"></ion-icon>
+        <ion-icon name="contacts" small></ion-icon>
         Contacts
       </button>
       <button ion-item icon-left menuClose (click)="openPage(pnapsPage)">
-        <ion-icon name="people"></ion-icon>
+        <ion-icon name="people" small></ion-icon>
         PNAPS
       </button>
       <button ion-item icon-left menuClose (click)="openPage(hazardousMaterialPage)">
-        <ion-icon name="nuclear"></ion-icon>
+        <ion-icon name="nuclear" small></ion-icon>
         Matières dangereuses
       </button>
       <button ion-item icon-left menuClose (click)="openPage(alarmPanelsPage)">
-        <ion-icon name="notifications"></ion-icon>
+        <ion-icon name="notifications" small></ion-icon>
         Panneaux d'alarme
       </button>
       <button ion-item icon-left menuClose (click)="openPage(waterSprinklersPage)">
-        <ion-icon name="water"></ion-icon>
+        <ion-icon name="water" small></ion-icon>
         Gicleurs
       </button>
       <button ion-item icon-left menuClose (click)="openPage(particularRisksPage)">
-        <ion-icon name="flash"></ion-icon>
+        <ion-icon name="flash" small></ion-icon>
         Risques particuliers
       </button>
       <button ion-item icon-left menuClose (click)="openPage(anomaliesPage)">
-        <ion-icon name="warning"></ion-icon>
+        <ion-icon name="warning" small></ion-icon>
         Anomalies
       </button>
       <button ion-item icon-left (click)="closeMenu()">
-        <ion-icon name="undo"></ion-icon>
+        <ion-icon name="undo" small></ion-icon>
         Retourner à l'inspection
       </button>
       <button ion-item icon-left (click)="closeMenu()">
-        <ion-icon name="close-circle"></ion-icon>
+        <ion-icon name="close-circle" small></ion-icon>
         Fermer le menu
       </button>
     </ion-list>
