--- a/src/pages/building-contact-detail/building-contact-detail.html
+++ b/src/pages/building-contact-detail/building-contact-detail.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the BuildingContactDetailPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -94,7 +88,7 @@
 
   <ion-navbar>
     <ion-buttons left>
-      <button ion-button  icon-left (click)="onDeleteContact()">
+      <button ion-button  icon-start (click)="onDeleteContact()">
         <ion-icon name="trash"></ion-icon>
         Supprimer ce contact
       </button>
