--- a/src/pages/building-contacts/building-contacts.html
+++ b/src/pages/building-contacts/building-contacts.html
@@ -19,8 +19,8 @@
     <ion-list-header>
       Contacts du bâtiment
     </ion-list-header>
-    <button ion-item icon-left *ngFor="let contact of contacts | orderBy:'name'" (click)="onItemClick(contact.id)">
-      <ion-icon [name]="contact.isOwner ? 'key' : 'contact'"></ion-icon>
+    <button ion-item icon-start *ngFor="let contact of contacts | orderBy:'name'" (click)="onItemClick(contact.id)">
+      <ion-icon [name]="contact.isOwner ? 'key' : 'contact'" small></ion-icon>
       {{contact.name}}
     </button>
   </ion-list>
